fix kpi z-index issue on program page

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -74,3 +74,7 @@ body {
   -webkit-animation-iteration-count: 1;
   animation-iteration-count: 1;
 }
+
+.program-kpi-table .ant-table-placeholder {
+  z-index: 10 !important;
+}
